<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCadastro">

    <RelativeLayout
        android:id="@+id/ddjsdcn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textView150"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="10dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="Cadastrar/Entrar"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView128"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="9dp"
            android:layout_marginLeft="9dp"
            app:srcCompat="@mipmap/back" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ddjsdcn">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView152"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorPrimary"
                android:elevation="0dp"
                android:fontFamily="serif"
                android:text="@string/avancar"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_bias="0.261" />

            <Button
                android:id="@+id/button34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView153"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorPrimary"
                android:elevation="0dp"
                android:fontFamily="serif"
                android:text="@string/cadastrar"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_bias="0.261" />

            <TextView
                android:id="@+id/textView151"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="41dp"
                android:fontFamily="serif"
                android:text="@string/insiraCel"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etTelefoneLayoutCadastrarCelVerificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button20"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textColorHint="@android:color/darker_gray"
                android:theme="@style/MyEditTextTheme"
                android:visibility="invisible">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etTelefoneCadastrarCelVerificar"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/codigoVerificacao"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView152"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_phone_input"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="serif"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/requisitoLegal"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView153"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etTelefoneLayoutCadastrarCelVerificar"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:fontFamily="serif"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/requisitoLegalVerificacao"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:visibility="invisible" />

            <net.rimoto.intlphoneinput.IntlPhoneInput
                android:id="@+id/my_phone_input"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/textView151"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="17dp"
                android:layout_marginRight="20dp"
                android:gravity="bottom"
                android:theme="@style/MyEditTextTheme"
                app:textColor="@android:color/black"
                app:textColorHint="@android:color/darker_gray"
                app:textSize="20sp"
                android:layout_alignParentLeft="true" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>